[gd_scene load_steps=10 format=3 uid="uid://baencrytusfer"]

[ext_resource type="Script" path="res://script/StageSelect.gd" id="1_wt4id"]
[ext_resource type="Texture2D" uid="uid://cfwdko2u7pft4" path="res://asset/logo.png" id="2_7k2ji"]
[ext_resource type="Texture2D" uid="uid://dt4c040ucqf7b" path="res://asset/slime.png" id="3_oeu7n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mvmb2"]
atlas = ExtResource("3_oeu7n")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysikp"]
atlas = ExtResource("3_oeu7n")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3otlm"]
atlas = ExtResource("3_oeu7n")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhvd6"]
atlas = ExtResource("3_oeu7n")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hh5p5"]
atlas = ExtResource("3_oeu7n")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_h1deh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvmb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysikp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3otlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhvd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh5p5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="StageSelect" type="CanvasLayer"]
script = ExtResource("1_wt4id")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.092237, 0.0503689, 0.267811, 0.580392)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 2
offset_left = 124.0
offset_top = 61.0
offset_right = 586.0
offset_bottom = 349.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("2_7k2ji")
expand_mode = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ColorRect"]
position = Vector2(889, 416)
scale = Vector2(4.96094, 4.96094)
sprite_frames = SubResource("SpriteFrames_h1deh")
autoplay = "default"
frame_progress = 0.503895

[node name="Level1" type="LinkButton" parent="ColorRect"]
layout_mode = 0
offset_left = 144.0
offset_top = 349.0
offset_right = 2867.0
offset_bottom = 1031.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 500
text = "Stage 1"
underline = 1

[node name="Level2" type="LinkButton" parent="ColorRect"]
layout_mode = 0
offset_left = 144.0
offset_top = 400.0
offset_right = 3036.0
offset_bottom = 1082.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 500
text = "Stage 2"
underline = 1

[node name="MainMenu" type="LinkButton" parent="ColorRect"]
layout_mode = 0
offset_left = 142.0
offset_top = 448.0
offset_right = 2864.0
offset_bottom = 1130.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 500
text = "Main Menu"
underline = 1

[connection signal="pressed" from="ColorRect/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="ColorRect/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="ColorRect/MainMenu" to="." method="_on_main_menu_pressed"]
